--- a/earbuds.html
+++ b/earbuds.html
@@ -28,7 +28,7 @@
         <meta name="revisit-after" content="2 days">
         <meta name="keywords" content="HarutoHiroki, Twitter, Developer, Github, Discord, IEMs, In Ear Monitors, Headphones">
         <link rel="canonical" href="https://htangl.github.io/earbuds.html"/>
-        <meta name="theme-color" content="#00FFD9">
+        <meta name="theme-color" content="#00FF6F">
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"/>
         <link rel="shortcut icon" type="image/png" href="assets/images/prince.png"/>      
